fixed lots of code warnings